--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,3 +14,4 @@ parameters:
     mailer_password: null
     secret: 5eaafed90559aa5929ad50fd535c155fba623e57
     slack.token: InsertYourTokenHere
+    slack_cmd_token.post: InsertLibraryCommandTokenHere
